Fixes NextOnLine and PreviousOnLine to work with inline block objects

There were two bugs:
1. The next or previous on line might be an anonymous block object that is ignored in the accessibility tree.
Fixed by assigning the same next and previous on line object to any child, if the child doesn't have its own next or previous on line object.
2. The object returned by next on line is not the same as the one returned from previous on line on the other object and vice versa.
Fixed by always descending and returning a leaf object for next and previous on line.
R=dmazzoni@chromium.org, aleventhal@chromium.org

Bug: 646785
Change-Id: Ibe6f1fd6b682b9b7345af22f9cbd3ca66f9db801
Tested: Gmail compose window with a link, NVDA and Jaws with an anonymous block created by background-color: red, layout tests
Reviewed-on: https://chromium-review.googlesource.com/766908
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Commit-Queue: Nektarios Paisios <nektar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#516347}